fix css & html bugs

--- a/source_code/templates/add.html
+++ b/source_code/templates/add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-static-top">
         <div class="container">
           <div class="navbar-header">
-            <a href="/" class="navbar-brand"><b>SimplePhone</b>Book</a>
+            <a href="/" class="navbar-brand"><strong>SimplePhone</strong>Book</a>
           </div>
         </div>
       </nav>
