--- a/source_code/templates/add.html
+++ b/source_code/templates/add.html
@@ -32,9 +32,7 @@
         <section class="content">
           <div class="box box-info">
             <div class="box-header with-border">
-            	<center>
-            		<h3 class="box-title">Add Phone Number</h3>
-            	</center>
+            		<h3 align="center" class="box-title" >Add Phone Number</h3>
             </div>
 
             <form class="form-horizontal" method="POST" action="/addphone">
