fix css & html bugs

--- a/source_code/templates/add.html
+++ b/source_code/templates/add.html
@@ -32,7 +32,7 @@
         <section class="content">
           <div class="box box-info">
             <div class="box-header with-border">
-            		<h3 align="center" class="box-title" >Add Phone Number</h3>
+            		<h3 class="box-title" >Add Phone Number</h3>
             </div>
 
             <form class="form-horizontal" method="POST" action="/addphone">
