--- a/source_code/templates/index.html
+++ b/source_code/templates/index.html
@@ -52,7 +52,7 @@
 
             <div class="box-body">
               <table id="dataphone" class="table table-bordered table-striped">
-                <thead align="center">
+                <thead>
                   <tr>
                     <th >Name</th>
                     <th>Phone Number</th>
@@ -75,7 +75,7 @@
                     <td>{{ row[1] }}</td>
                     <td>{{ row[2] }}</td>
                     <td>{{ row[3] }}</td>
-                    <td align="center">
+                    <td>
                       <a href="/update/{{ row[0]}}">
                         <button type="button" class="btn btn-sm btn-warning btn-flat" title="Update"><span class="glyphicon glyphicon-pencil"></span></button>
                       </a>
