--- a/source_code/templates/delete.html
+++ b/source_code/templates/delete.html
@@ -20,7 +20,7 @@
       <nav class="navbar navbar-static-top">
         <div class="container">
           <div class="navbar-header">
-            <a href="/" class="navbar-brand"><b>SimplePhone</b>Book</a>
+            <a href="/" class="navbar-brand"><strong>SimplePhone</strong>Book</a>
           </div>
         </div>
       </nav>
@@ -31,9 +31,7 @@
         <section class="content">
           <div class="box box-info">
             <div class="box-header with-border">
-            	<center>
             		<h3 class="box-title">Delete Phone Number</h3>
-            	</center>
             </div>
 
             <form class="form-horizontal" method="POST" action="/deletephone">
@@ -79,7 +77,7 @@
     <footer class="main-footer">
       <div class="container">
         <div class="pull-right hidden-xs">
-          <b>Version</b> 0.1
+          <strong>Version</strong> 0.1
         </div>
       </div>
     </footer>
