--- a/source_code/templates/error.html
+++ b/source_code/templates/error.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-static-top">
         <div class="container">
           <div class="navbar-header">
-            <a href="/" class="navbar-brand"><b>SimplePhone</b>Book</a>
+            <a href="/" class="navbar-brand"><strong>SimplePhone</strong>Book</a>
           </div>
         </div>
       </nav>
@@ -34,7 +34,7 @@
             <h2 class="headline text-yellow"> 404</h2>
 
             <div class="error-content">
-              <h3><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
+              <h3><em class="fa fa-warning text-yellow"></em> Oops! Page not found.</h3>
               <p>
                 We could not find the page you were looking for.
                 Meanwhile, you may return to <a href="/"><code>index page</code></a>
@@ -49,7 +49,7 @@
     <footer class="main-footer">
       <div class="container">
         <div class="pull-right hidden-xs">
-          <b>Version</b> 0.1
+          <strong>Version</strong> 0.1
         </div>
       </div>
     </footer>
