--- a/source_code/templates/index.html
+++ b/source_code/templates/index.html
@@ -42,16 +42,14 @@
           <div class="box box-primary">
             <div class="box-header">
               <a href="/add">
-              	<center>
               		<button type="button" class="btn btn-primary btn-flat">
               			<span class="glyphicon glyphicon-plus"></span> Add Phone Number
               		</button>
-              	</center>
               </a>
             </div>
 
             <div class="box-body">
-              <table id="dataphone" class="table table-bordered table-striped">
+              <table summary="Address Table" id="dataphone" class="table table-bordered table-striped">
                 <thead>
                   <tr>
                     <th >Name</th>
@@ -97,7 +95,7 @@
     <footer class="main-footer">
       <div class="container">
         <div class="pull-right hidden-xs">
-          <b>Version</b> 0.1
+          <strong>Version</strong> 0.1
         </div>
       </div>
     </footer>
