--- a/source_code/templates/update.html
+++ b/source_code/templates/update.html
@@ -77,7 +77,7 @@
     <footer class="main-footer">
       <div class="container">
         <div class="pull-right hidden-xs">
-          <b>Version</b> 0.1
+          <strong>Version</strong> 0.1
         </div>
       </div>
     </footer>
