--- a/source_code/templates/index.html
+++ b/source_code/templates/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-static-top">
         <div class="container">
           <div class="navbar-header">
-            <a href="/" class="navbar-brand"><b>SimplePhone</b>Book</a>
+            <a href="/" class="navbar-brand"><strong>SimplePhone</strong>Book</a>
           </div>
         </div>
       </nav>
