--- a/source_code/templates/update.html
+++ b/source_code/templates/update.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-static-top">
         <div class="container">
           <div class="navbar-header">
-            <a href="/" class="navbar-brand"><b>SimplePhone</b>Book</a>
+            <a href="/" class="navbar-brand"><strong>SimplePhone</strong>Book</a>
           </div>
         </div>
       </nav>
@@ -29,9 +29,7 @@
         <section class="content">
           <div class="box box-info">
             <div class="box-header with-border">
-              	<center>
 	              	<h3 class="box-title">Update Phone Number</h3>
-	            </center>
             </div>
 
             <form class="form-horizontal" method="POST" action="/updatephone">
