--- a/source_code/templates/index.html
+++ b/source_code/templates/index.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="box-body">
-              <table summary="Address Table" id="dataphone" class="table table-bordered table-striped">
+              <table id="dataphone" class="table table-bordered table-striped">
                 <thead>
                   <tr>
                     <th >Name</th>
