--- a/source_code/templates/index.html
+++ b/source_code/templates/index.html
@@ -50,6 +50,7 @@
 
             <div class="box-body">
               <table id="dataphone" class="table table-bordered table-striped">
+                <caption>Phone Book List</caption>
                 <thead>
                   <tr>
                     <th >Name</th>
